--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 					{"codigo":"008","nombre":"Carlos Medina","nota":84},
 					{"codigo":"009","nombre":"Ruth Carranza","nota":53},
 					{"codigo":"010","nombre":"Luis Cortez","nota":71}];
+
+//Funcion para mostrar el Listado de Estudiantes
 	function listado(){
 		var a="";
 		for(i=0;i<estudiantes.length;i++){
@@ -40,6 +42,8 @@
 		}
 		document.getElementById("texto1").innerHTML=a;
 	}
+
+//Funcion para calcular el Promedio
 	function promedio(){
 		var b=0;
 		for(i=0;i<estudiantes.length;i++){
@@ -47,6 +51,8 @@
 		}
 		document.getElementById("texto2").innerHTML="El Promedio es de <br>"+b.toFixed(2);
 	}
+
+// Funcion para encontrar el numero mayor y mostrar el nombre
 	function mayor(){
 		var mayor=estudiantes[0].nota;
 		var contador=1;
@@ -60,6 +66,8 @@
 		}
 		document.getElementById("texto3").innerHTML="El Mejor Estudiante es: <br>"+c;
 	}
+
+//Funcion para encontrar el numero menor y mostrar el nombre
 	function menor(){
 		var menor=estudiantes[0].nota;
 		var contador=1;
